PMD Checker changes by mahesh